--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-::-webkit-scrollbar { 
+::-webkit-scrollbar {
     display: none;
 }
 body {
@@ -6,4 +6,5 @@ body {
   padding: 0;
   font-family: sans-serif;
   background-color: #222;
+  overflow: hidden;
 }
